# cpp_with_scripting

./: .gitmodules  CMakeLists.txt  README.md
assets/: hi.lua
source/: demo_chaiscript.cpp  demo_lua.cpp  demo_lua_sol.cpp  demo_pocketpy.cpp  loading_lua_file.cpp  main.cpp
